--- a/src/res/locales/app.es-ES.po
+++ b/src/res/locales/app.es-ES.po
@@ -60,11 +60,11 @@ msgstr "ZNC"
 
 #: Logging in...
 msgid "logging_in"
-msgstr ""
+msgstr "Verificando credenciales..."
 
 #: Invalid login
 msgid "invalid_login"
-msgstr ""
+msgstr "Credenciales inválidas"
 
 #: Realname field in a users whois
 msgid "whois_realname"
@@ -108,7 +108,7 @@ msgstr "URL del tema"
 
 #: Use Monospace
 msgid "settings_use_monospace"
-msgstr ""
+msgstr "Usar fuente Monospace"
 
 #: Show autocomplete list
 msgid "settings_show_autocomplete"
@@ -136,7 +136,7 @@ msgstr "Bloquear nuevos mensajes privados"
 
 #: Messages in scrollback
 msgid "settings_scrollback"
-msgstr ""
+msgstr "Mensajes en el histórico"
 
 #: Extra formatting
 msgid "settings_formatting"
@@ -447,7 +447,7 @@ msgstr "Banear de la sala"
 
 #: Kick + Ban from the channel
 msgid "user_kickban"
-msgstr ""
+msgstr "Kick + Ban del canal"
 
 #: Your IRC client
 msgid "personal_client"
