--- a/src/res/locales/app.en-US.po
+++ b/src/res/locales/app.en-US.po
@@ -266,6 +266,10 @@ msgstr "Loading {{url}}..."
 msgid "messages_load"
 msgstr "Load previous messages"
 
+#: Unread Messages
+msgid "unread_messages"
+msgstr "Unread Messages"
+
 #: NetworkSettings $t('settings_')
 msgid "settings_server_details"
 msgstr "Server details"
