--- a/src/res/locales/app.dev.po
+++ b/src/res/locales/app.dev.po
@@ -85,6 +85,10 @@ msgid "cancel"
 msgstr "Cancel"
 
 
+#: This will close all KiwiIRC conversations. Are you sure you want to close this window?
+msgid "window_unload"
+msgstr "This will close all KiwiIRC conversations. Are you sure you want to close this window?"
+
 #: Realname field in a users whois
 msgid "whois_realname"
 msgstr "Real name"
